[gd_scene load_steps=2 format=3 uid="uid://cikuv1asqnpit"]

[ext_resource type="Script" uid="uid://fkc4wxrn5lf1" path="res://components/general/nearest_in_area/nearest_in_area.gd" id="1_8eg34"]

[node name="NearestInArea" type="Area2D"]
collision_layer = 0
collision_mask = 104
script = ExtResource("1_8eg34")
line_of_sight_blockers = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
